# ORBIS-ERP

./: .gitignore
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  schema.yml  test_hf.py
backend/apps/api_dashboard/: __init__.py  api.py  apps.py  models.py  urls.py  views.py
backend/apps/api_dashboard/migrations/: 0001_initial.py
backend/apps/api_dashboard/services/: __init__.py  exporting.py  (+3 more)
backend/apps/audit/: admin.py  api.py  apps.py  models.py  services.py
backend/apps/common/: api.py  api_views.py  apps.py  auth_api.py  backend_api.py  backend_registry.py  cloudinary.py  context.py  dashboard.py  middleware.py  models.py  permissions.py  profile_services.py  reporting.py  serializers.py  services_check.py  signals.py
backend/apps/inventory/: api.py  models.py  services.py
backend/apps/manufacturing/: admin.py  api.py  apps.py  models.py  services.py  test_manufacturing.py
backend/apps/partners/: __init__.py  admin.py  api.py  apps.py  models.py
backend/apps/products/: admin.py  api.py  models.py  test_products.py
backend/apps/purchases/: admin.py  api.py  apps.py  models.py  services.py  test_purchases.py
backend/apps/sales/: admin.py  api.py  apps.py  models.py  services.py  test_sales.py
backend/apps/users/: api.py  api_admin.py  apps.py  models.py  signals.py
backend/config/: api_urls.py  asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py  test.py
backend/mini_erp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+146 files in other folders)
